--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 {% include base_path %}
 
 <div class="page__footer-copyright">
-  © {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+  © {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}<br />
+  Site last updated {{ "now" | date: '%Y-%m-%d' }}
 </div>
