--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -14,26 +14,16 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-ט{% if include.type == "grid" and teaser %}
+    {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
         <img src=
-          {% if teaser contains "://" %}
             "{{ teaser }}"
-          {% else %}
-            "{{ teaser | prepend: "/images/" | prepend: base_path }}"
-          {% endif %}
           alt="">
       </div>
     {% elsif post.collection == 'blog' or post.collection == 'projects' %}
       {% if teaser %}
         <div class="archive__item-teaser">
-          <img src=
-            {% if teaser contains "://" %}
-              "{{ teaser }}"
-            {% else %}
-              "{{ teaser | prepend: "/images/" | prepend: base_path }}"
-            {% endif %}
-            alt="">
+          <img src="{{ teaser }}" alt="">
         </div>
       {% endif %}
     {% endif %}
